Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
============================
HYPERMAIL VERSION 2.4.0:
============================

2019-11-22 Jose Kahan
	* src/print.c
	printsubject() / printdates(): the "by suject" and "by dates" views
	were not escaping markup present in mail's Suject and From headers.

2019-11-19 Jose Kahan
	* src/pcre
	Upgraded to upstream version 8.43. This fixes some autoconf issues we
	had on newer debian releases. This is only relevant for people that
	are not linking against a system libpcre.

	* tests/diff_hypermail_archives.pl
	Rewrote diff_hypermail.pl to make it more flexible and powerful for
	finding the differences in two hypermail archives.

2018-12-07 Jose Kahan
	* If the antispamdomain config option was used, hypermail was replacing
	everything following a "@" character by the antispam domain.  This fix
	makes antispamdomain only apply for the domain part of valid email
	addresses.

2018-11-29 Bill Shannon
	* string.c
	spamify_replacedomain(): fix another greedy "@" replacement in the
	middle of a string of iso-2022-jp encoded Japanese characters.

2018-11-04 Bill Shannon
	* string.c
	i18n_convstring(): When converting a utf-8 string to iso-2022-jp,
	hypermail always adds the "return to ASCII" escape sequence, even if
	the string ends with ASCII.

	parseemail(): hypermail attempts to transform anything that looks like
	an email address by replacing the at sign (and optionally the domain
	name) with a string (default "at") to confuse screen-scraping
	programs. But if there's an "@" character in the middle of a string of
	iso-2022-jp encoded Japanese characters, hypermail still converts it,
	breaking the Japanese character.

2018-10-12 Jose Kahan
	* setup.c PreConfig(): removed a 64-bit warning

	* hypermail.c
	main(): if the en_US locale is not available, try en_US.UTF-8

2018-10-11 Jose Kahan

	* string.c
	parseemail(): for some reason if a ',' char was concatenaned to an